IR/tests/test109.IR.out
ERROR: instruction at line 6 attempted to use position 12 in a tuple that only has 3 elements
